--- a/index.html
+++ b/index.html
@@ -1,84 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Integrin Simulation Dashboard</title>
   <style>
-    /* ----- General Page Styling ----- */
     body {
-      font-family: "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      background: linear-gradient(135deg, #e3f2fd, #f9fafb);
+      font-family: Arial, sans-serif;
+      background: #f9fafb;
+      color: #222;
       margin: 0;
-      padding: 0;
-      color: #1e293b;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
+      padding: 20px;
     }
-
     h1 {
-      font-size: 2em;
-      margin-top: 40px;
-      color: #0f172a;
-      text-shadow: 1px 1px 2px rgba(0,0,0,0.05);
+      text-align: center;
+      color: #003366;
     }
-
     #update-time {
-      margin: 10px 0 25px 0;
-      color: #64748b;
-      font-size: 0.95em;
+      text-align: center;
+      margin-bottom: 20px;
+      color: #555;
     }
-
-    /* ----- Table Styling ----- */
     table {
       width: 80%;
-      max-width: 800px;
+      margin: 0 auto;
       border-collapse: collapse;
-      background: #ffffffcc;
-      border-radius: 16px;
-      box-shadow: 0 4px 20px rgba(0,0,0,0.08);
+      background: white;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      border-radius: 10px;
       overflow: hidden;
-      backdrop-filter: blur(10px);
-      animation: fadeIn 1s ease-in-out;
     }
-
     th, td {
-      padding: 16px;
+      padding: 12px 15px;
       text-align: center;
-      font-size: 16px;
     }
-
     th {
-      background: #1e40af;
+      background-color: #003366;
       color: white;
-      letter-spacing: 1px;
-      font-size: 15px;
       text-transform: uppercase;
+      font-size: 14px;
     }
+    tr:nth-child(even) { background-color: #f2f2f2; }
+    tr:hover { background-color: #e8f0fe; }
 
-    tr:nth-child(even) { background-color: #f8fafc; }
-    tr:hover { background-color: #e0f2fe; transition: background 0.3s; }
-
-    /* ----- Responsive for Mobile ----- */
-    @media (max-width: 600px) {
-      table { width: 95%; font-size: 14px; }
-      th, td { padding: 10px; }
-    }
-
-    /* ----- Subtle Animation ----- */
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    footer {
-      margin-top: 40px;
-      font-size: 0.85em;
-      color: #94a3b8;
-      text-align: center;
-    }
+    .status-running { color: green; font-weight: bold; }
+    .status-completed { color: blue; font-weight: bold; }
+    .status-queued { color: gray; font-weight: bold; }
   </style>
 </head>
 <body>
@@ -89,40 +56,38 @@
     <thead>
       <tr>
         <th>Simulation</th>
+        <th>Status</th>
         <th>Elapsed Time</th>
       </tr>
     </thead>
     <tbody></tbody>
   </table>
 
-  <footer>
-    Designed with 💻 by Onkar Joshi
-  </footer>
-
   <script>
     async function loadData() {
       try {
-        const response = await fetch("data.json");
+        const response = await fetch('data.json');
         const data = await response.json();
 
-        // Update timestamp
-        document.getElementById("update-time").innerText =
-          "Last Updated On: " + data.last_updated;
+        // Update "last updated" line
+        document.getElementById('update-time').innerText =
+          'Last Updated On: ' + data.last_updated;
 
-        // Build table
-        const tbody = document.querySelector("#simTable tbody");
-        tbody.innerHTML = "";
-        data.simulations.forEach((sim) => {
-          const row = document.createElement("tr");
+        // Populate table
+        const tbody = document.querySelector('#simTable tbody');
+        tbody.innerHTML = '';
+        data.simulations.forEach(sim => {
+          const row = document.createElement('tr');
           row.innerHTML = `
             <td>${sim.name}</td>
+            <td class="status-${sim.status.toLowerCase()}">${sim.status}</td>
             <td>${sim.elapsed}</td>
           `;
           tbody.appendChild(row);
         });
-      } catch (err) {
-        document.getElementById("update-time").innerText =
-          "Error loading data.json";
+      } catch (error) {
+        document.getElementById('update-time').innerText =
+          'Error loading data. Please check data.json.';
       }
     }
 
