--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <tr>
         <th>Simulation</th>
         <th>Status</th>
-        <th>Elapsed Time</th>
+        <th>Simulation Time</th>
       </tr>
     </thead>
     <tbody></tbody>
@@ -95,3 +95,4 @@
   </script>
 </body>
 </html>
+
