--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
     .status-queued { color: #6b7280; font-weight: 600; }
 
     /* keep columns closer */
-    th:first-child, td:first-child { width: 65%; }
-    th:nth-child(2), td:nth-child(2) { width: 20%; text-align: center; }
-    th:nth-child(3), td:nth-child(3) { width: 15%; text-align: right; }
+/* tighter column spacing */
+th:first-child, td:first-child { width: 55%; }
+th:nth-child(2), td:nth-child(2) { width: 25%; text-align: center; }
+th:nth-child(3), td:nth-child(3) { width: 25%; text-align: center; }
+
   </style>
 </head>
 <body>
@@ -106,3 +108,4 @@
   </script>
 </body>
 </html>
+
