--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     /* keep columns closer */
 /* tighter column spacing */
-th:first-child, td:first-child { width: 55%; }
+th:first-child, td:first-child { width: 55%; text-align: center; }
 th:nth-child(2), td:nth-child(2) { width: 25%; text-align: center; }
 th:nth-child(3), td:nth-child(3) { width: 25%; text-align: center; }
 
@@ -108,4 +108,5 @@ th:nth-child(3), td:nth-child(3) { width: 25%; text-align: center; }
   </script>
 </body>
 </html>
+
 
