--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     /* first column font colors per group */
     .group-water { color: #1d4ed8; font-weight: 600; }          /* blue */
-    .group-membrane { color: #16a34a; font-weight: 600; }       /* green */
-    .group-transmembrane { color: #dc2626; font-weight: 600; }  /* red */
+    .group-membrane { color: #7C3AED; font-weight: 600; }       /* purple */
+    .group-transmembrane { color: #92400E; font-weight: 600; }  /* brown */
   </style>
 </head>
 <body>
@@ -119,3 +119,4 @@
   </script>
 </body>
 </html>
+
