--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     /* first column font colors per group */
     .group-water { color: #1d4ed8; font-weight: 600; }          /* blue */
-    .group-membrane { color: #7C3AED; font-weight: 600; }       /* purple */
-    .group-transmembrane { color: #92400E; font-weight: 600; }  /* brown */
+    .group-membrane { color: #92400E; font-weight: 600; }       /* brown */
+    .group-transmembrane { color: #7C3AED; font-weight: 600; }  /* purple */
   </style>
 </head>
 <body>
@@ -119,4 +119,5 @@
   </script>
 </body>
 </html>
+
 
