--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     /* status colors */
     .status-running { color: #15803d; font-weight: 600; }
     .status-completed { color: #1e40af; font-weight: 600; }
-    .status-Stopped { color: #FF0000; font-weight: 600; }
+    .status-Stopped { color: #ff0000; font-weight: 600; }
 
     /* column widths */
     th:first-child, td:first-child { width: 30%; text-align: center; }
@@ -119,6 +119,7 @@
   </script>
 </body>
 </html>
+
 
 
 
